src/test/deca/context/invalid/sansObjet/BadAdditionFloatAndInt.deca
{
    int x = 2020;
    float y = 2020.5f;
    int z;
    z = x+y;
}